@@ -1,5 +1,7 @@
 - NEW: In the settings dialog, network page. A new button to edit the
        Subversion servers file. (Stefan)
+- NEW: Context menu entries to resolve a conflicted file inside the commit
+       dialog by using either "mine" or "theirs" directly. (Stefan)
 - BUG: When fetching files to diff, the progress dialog shown while fetching
        the files from the repository always showed revision 1 instead of the
        real revision where the file was fetched from. (Stefan)
